# kbkminer

./: CMakeLists.txt  LICENSE  README.md  bis.cu  bis.h  bisWrapper.cpp  miner.txt  mycompile.sh  optihash.py
